live-subtitle-generator: intial app working (#1)