@@ -1,1 +1,4 @@
 # live-subtitle-generator
+1. mvn clean package
+2. cp -r ffmpeg target
+3. java --module-path /Users/junayedcraftsmen/mytask/all-mocks/live-subtitle-generator/javafx-sdk-15/lib --add-modules javafx.controls,javafx.fxml -jar target/live-subtitle-generator-1.0-SNAPSHOT-jar-with-dependencies.jar
